# crispy-system

./: README.md  TermGui.sln  pyproject.toml
Obfuscator/: Program.cs
SpaceInvader/: A.cs  GameView.cs  LeaderBoardApi.cs  MainApp.cs  MainScreenState.cs  Program.cs  ScoreEntry.cs  ScoreEntryJsonContext.cs  Settings.json  SocketHandlerBuilder.cs  SpaceInvader.csproj
TermGui/: GameView.cs  LeaderBoardApi.cs  MainApp.cs  MainScreenState.cs  Program.cs  ScoreEntry.cs  Settings.json  TermGui.csproj
WebApplication1/: ApiKeyHandler.cs  AzureTableAuthHelper.cs  LeaderBoardService.cs  LeaderboardTemplate.html  Program.cs  ScoreEntryJsonContext.cs  ScoreService.cs  ScoreTableEntry.cs  TableService.cs  UserEntity.cs  WebApplication1.csproj  appsettings.json
WebApplication1/Data/: SQLLiteDatabase.db
WebApplication1/Properties/: launchSettings.json
WebApplication1/Properties/ServiceDependencies/sapce-invader - Zip Deploy/: profile.arm.json
WebApplication1/Properties/ServiceDependencies/space-invader - Zip Deploy/: profile.arm.json
WebApplication1/Protos/: score.proto
automated_crew_agents_for_code_analysis_and_app_generation/src/automated_crew_agents_for_code_analysis_and_app_generation/: crew.py
automated_crew_agents_for_code_analysis_and_app_generation/src/automated_crew_agents_for_code_analysis_and_app_generation/config/: agents.yaml  tasks.yaml
src/automated_crew_agents_for_code_analysis_and_app_generation/: main.py
