[project]
name = "automated_crew_agents_for_code_analysis_and_app_generation"
version = "0.1.0"
description = "automated_crew_agents_for_code_analysis_and_app_generation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
automated_crew_agents_for_code_analysis_and_app_generation = "automated_crew_agents_for_code_analysis_and_app_generation.main:run"
run_crew = "automated_crew_agents_for_code_analysis_and_app_generation.main:run"
train = "automated_crew_agents_for_code_analysis_and_app_generation.main:train"
replay = "automated_crew_agents_for_code_analysis_and_app_generation.main:replay"
test = "automated_crew_agents_for_code_analysis_and_app_generation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
